# spotify-data-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
spotify_analysis/: __init__.py
spotify_analysis/app/: app.py
spotify_analysis/src/analysis/: streaming_history_analyser.py
spotify_analysis/src/data/: _schema.py  streaming_history.py
