[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify_analysis"
version = "0.1.0"
dependencies = [
    "altair==5.5",
    "ipython",
    "narwhals==1.40",
    "nbformat==5.10.4",
    "plotly==6.1",
    "polars==1.30",
    "statsmodels==0.14.4",
    "streamlit==1.45",
    "vegafusion==2.0",
    "vl-convert-python==1.7.0"
]